--- a/site.toml
+++ b/site.toml
@@ -7,4 +7,4 @@
 name = "site"
 
 # This page should be the root of your website. It's important.
-page = "<your Notion share URL here>"
+page = "https://huyenbui117.notion.site/Quick-Note-d24437da77b043b9ab61d8a4a7c75eef?pvs=4"
